# work-agents

./: .env.example  .gitignore  Makefile  README.md  TODO.md  pyproject.toml  test_main.http
app/: main.py
app/api/routes/: chat.py  conversations.py  health.py  manage_mcp.py  manage_workflows.py  mcp.py  runs.py  workflows.py  ws_chat.py
app/core/: config.py
app/mcp_server/: __init__.py  arithmetic.py  finance.py  marketdata.py
app/persistence/: conversations.py  database.py  mcp_services.py  runs.py  workflows.py
app/schemas/: chat.py  mcp.py  workflow.py
app/services/: dynamic_workflow_engine.py  dynamic_workflow_registry.py  errors.py  langgraph_travel_workflow.py  llm_service.py  llm_utils.py  mcp_client.py  mcp_registry.py  observability.py  openai_client.py  skill_workflow_engine.py  tool_planner.py  workflow_adapters.py  workflow_registry.py  workflow_router.py  workflow_runtime.py  workflow_service.py
app/tools/: __init__.py  registry.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  MCPManager.tsx  MCPPage.tsx  MCPPanel.tsx  RunPanel.tsx  SkillEditor.tsx  WorkflowComposerEditor.tsx  WorkflowFlowEditor.tsx  WorkflowManager.tsx  WorkflowPanel.tsx  WorkflowVisualEditor.tsx
