[project]
name = "work-agents"
version = "0.1.0"
description = "FastAPI service for OpenAI LLM and function calling."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.59.0",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
work-agents = "app.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
